--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
