--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/html": "^2.3.2",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -17,10 +18,11 @@
     "flowbite-react": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
-    "next": "^15.0.1",
+    "next": "^15.0.3",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "sweetalert2": "^11.14.4",
     "sweetalert2-react-content": "^5.0.7",
     "zod": "^3.23.8"
@@ -30,6 +32,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/react": "18.3.12",
     "autoprefixer": "^10.4.20",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
