--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "sweetalert2": "^11.14.4",
     "sweetalert2-react-content": "^5.0.7",
     "zod": "^3.23.8"
@@ -35,6 +36,6 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.17"
   }
 }
