--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": " cross-env next dev",
-    "build": "next build",
+    "build": "cross-env next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -29,13 +29,18 @@
     "@babel/preset-typescript": "^7.26.0",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "autoprefixer": "^10.4.20",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "cypress": "^13.17.0",
     "daisyui": "^4.12.13",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.1",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "webpack": "^5.97.1"
   }
 }
